[package]
name = "taskn"
version = "0.1.0"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"
description = "Taskwarrior task annotation helper"

[features]
default = []

remind = ["objc"]

[dependencies]
anyhow = "1.0.44"
block = "0.1.6"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
colored = "2.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
shellexpand = "2.1.0"
signal-hook = "0.3.7"
termion = "1.5.6"
thiserror = "1.0.29"
tui = "0.14.0"
# structopt = "0.3.21"
# task-hookrs = "0.7.0"

[target.'cfg(target_os="macos")'.dependencies]
objc = { version = "0.2.7", features = ["exception"], optional = true }
